# DiceParser

./: .gitignore  README.md  pyproject.toml
.github/workflow/: build.yml
.github/workflows/: build.yml  publish.yml
src/oneroll/: __main__.py  booleancondition.py  diceparser.py  diceroller.py  die.py  parsingtoolbox.py
src/oneroll/include/diceparser/: parsingtoolbox.py
src/oneroll/node/: executionnode..py
src/oneroll/token/: __init__.py
tests/: __init__.py  _lark.py
tests/dice/: rd.py
