[project]
name = "oneroll"
version = "1.0.3"
description = "onedice? no, this is just another Dice Parser lib. NO OFFENSE!"
authors = [
    {name = "简律纯", email = "i@jyunko.cn"},
]
dependencies = [
    "docutils>=0.20.1",
    "lark>=1.1.8",
    "cachetools>=5.3.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
oneroll = "oneroll.cli:Cli.parser"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


